# dotnet-native-interop

./: .gitattributes  .gitignore  Directory.Build.props  DotnetNativeInterop.slnx  OnDeviceLlm.slnx  README.md  mise.toml
.github/workflows/: ci-android.yml  ci-core.yml  ci-ios.yml
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  jni_bridge.c
android/gradle/: libs.versions.toml
aspire/: Directory.Build.props  README.md
aspire/DniObservability.AppHost/: AppHost.cs  DniObservability.AppHost.csproj  aspire.config.json
aspire/DniObservability.EngineHost/: DniObservability.EngineHost.csproj  EngineDriver.cs  Program.cs
core/DotnetNativeInterop.EdgeIndexPublisher/: DotnetNativeInterop.EdgeIndexPublisher.csproj  Frontmatter.cs  IndexWriter.cs  MarkdownChunker.cs  Program.cs  edge-fixtures.json  edge-index.db
core/DotnetNativeInterop.Engine/: BoundaryDiagnostics.cs  DotnetNativeInterop.Engine.csproj  EngineLog.cs  EngineLogEvents.cs  EngineMetrics.cs  EngineTelemetry.cs  EngineTrace.cs  ExtractiveLanguageModel.cs  FeatureShowcaseModel.cs  FractalRenderer.cs  ILanguageModel.cs  InferenceOrchestrator.cs  InferenceRequest.cs  InferenceSession.cs  InferenceToken.cs  LanguageFeatures.Bcl.cs  LanguageFeatures.ClassicSyntax.cs  LanguageFeatures.ModernSyntax.cs  LanguageFeatures.Runtime.cs  LanguageFeatures.cs  MockLanguageModel.cs  RagLanguageModel.cs  TrustPosture.cs
core/DotnetNativeInterop.NativeBridge/: DotnetNativeInterop.NativeBridge.csproj  EngineHost.cs  FeaturesJsonContext.cs  NativeInterop.cs  SessionRegistry.cs
core/OnDeviceLlm.Engine/: FeatureShowcaseModel.cs  FractalRenderer.cs  ILanguageModel.cs  InferenceOrchestrator.cs  InferenceRequest.cs  InferenceSession.cs  InferenceToken.cs  LanguageFeatures.Runtime.cs  LanguageFeatures.cs  MockLanguageModel.cs  OnDeviceLlm.Engine.csproj
core/OnDeviceLlm.NativeBridge/: EngineHost.cs  FeaturesJsonContext.cs  NativeInterop.cs  OnDeviceLlm.NativeBridge.csproj  SessionRegistry.cs
docs/: INTEROP_CONTRACT.md  aspire-nativeaot-findings.md  binary-size-ledger-findings.md  bouncycastle-pqc-findings.md  efcore-nativeaot-findings.md  foreman-grammar-sampling-findings.md  gpb-nativeaot-findings.md  int8-minilm-quant-findings.md  ios-build-deploy-runbook.md  ios-parity-work-order.md  llama-nativeaot-ios-findings.md  logging-nativeaot-findings.md  meai-nativeaot-findings.md  mlnet-nativeaot-findings.md  nativeaot-android-gate-findings.md  nativeaot-mobile-caveats.md  onnx-coreml-edge-findings.md  onnx-nativeaot-ios-findings.md  patterns.json  pqc-nativeaot-findings.md  protobuf-nativeaot-findings.md  size-ledger.json  wave-b-ios-plan-b-gates-findings.md
ios/: project.yml
ios/DotnetNativeInteropApp.xcodeproj/: project.pbxproj
ios/Frameworks/: .gitkeep
ios/ScreenshotTests/: ScreenshotTests.swift
ios/Shared/: AboutView.swift  AnalysisView.swift  Badges.swift  ComparisonView.swift  ComparisonViewModel.swift  DashboardView.swift  FeatureDetailView.swift  FeatureService.swift  FeaturesView.swift  FeaturesViewModel.swift  JSONDecode.swift  LatencyView.swift  Models.swift  QueryInput.swift  RootTabView.swift  SearchView.swift  TransportInfo.swift  (+4 more)
native/llama-shim/: CMakeLists.txt  build-llama.sh  dni_llama.cpp  dni_llama.h  grammar_gate.cpp
proto/: dni.proto  dni_frame.proto  ondevicellm.proto
screenshots/: README.md
spike/: Directory.Build.props  Spikes.slnx  set-aot-env.ps1
(+400 files in other folders)
